@@ -89,6 +89,11 @@ PKG_CHECK_MODULES(DBUS, [dbus-1 >= 0.95 dbus-glib-1 >= 0.70])
 AC_SUBST(DBUS_CFLAGS)
 AC_SUBST(DBUS_LIBS)
 
+PKG_CHECK_MODULES(GCONF, [gconf-2.0])
+AC_SUBST(GCONF_CFLAGS)
+AC_SUBST(GCONF_LIBS)
+
+
 AC_ARG_ENABLE(caching,
 	AC_HELP_STRING([--disable-caching],[Disable caching of remote media to local storage]),
 	[usecache=$enableval],[usecache=yes])
