@@ -129,7 +129,8 @@ event_mouseup(NULL),
 event_mouseclicked(NULL), event_enterwindow(NULL), event_leavewindow(NULL), debug(FALSE)
 {
     GRand *rand;
-
+    GConfClient *gconf;
+    
     // generate a random controlid
     rand = g_rand_new();
     controlid = g_rand_int_range(rand, 0, 65535);
@@ -140,6 +141,12 @@ event_mouseclicked(NULL), event_enterwindow(NULL), event_leavewindow(NULL), debu
         // printf("using path %s\n",path);
     }
 
+    g_type_init();
+    gconf = gconf_client_get_default();
+    debug_level = gconf_client_get_int(gconf, DEBUG_LEVEL, NULL);
+    g_object_unref(G_OBJECT(gconf));
+    
+    
     mScriptablePeer = getScriptablePeer();
     mScriptablePeer->SetInstance(this);
     mControlsScriptablePeer = getControlsScriptablePeer();
